--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "google-auth-library": "^10.3.0",
+    "googleapis": "^160.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
