--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev:react": "webpack-dev-server --mode development",
     "dev:electron": "wait-on http://localhost:8080 && electron .",
     "build": "webpack",
-    "package": "electron-builder"
+    "package": "electron-builder",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +22,7 @@
     "@babel/core": "^7.24.6",
     "@babel/preset-env": "^7.24.6",
     "@babel/preset-react": "^7.24.6",
+    "@playwright/test": "^1.55.0",
     "babel-loader": "^9.1.3",
     "concurrently": "^8.2.2",
     "css-loader": "^7.1.2",
@@ -27,6 +30,7 @@
     "electron-builder": "^24.13.3",
     "html-webpack-plugin": "^5.6.0",
     "nodemon": "^3.1.2",
+    "playwright": "^1.55.0",
     "style-loader": "^4.0.0",
     "wait-on": "^7.2.0",
     "webpack": "^5.91.0",
@@ -34,6 +38,7 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "chokidar": "^4.0.3",
     "dotenv": "^17.2.2",
     "google-auth-library": "^10.3.0",
     "googleapis": "^160.0.0",
