--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "webpack",
     "package": "electron-builder",
     "test": "playwright test",
+    "test:unit": "jest",
+    "test:watch": "jest --watch",
     "test:ui": "playwright test --ui"
   },
   "keywords": [],
@@ -23,12 +25,17 @@
     "@babel/preset-env": "^7.24.6",
     "@babel/preset-react": "^7.24.6",
     "@playwright/test": "^1.55.0",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "babel-loader": "^9.1.3",
     "concurrently": "^8.2.2",
     "css-loader": "^7.1.2",
     "electron": "^36.9.0",
     "electron-builder": "^24.13.3",
     "html-webpack-plugin": "^5.6.0",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
     "nodemon": "^3.1.2",
     "playwright": "^1.55.0",
     "style-loader": "^4.0.0",
